# PID-HOST

./: .gitignore  README.md  Start-PID-HOST-Demo-Hidden.vbs  Start-PID-HOST-Demo.bat  Start-PID-HOST-Hidden.vbs  Start-PID-HOST.bat  pyproject.toml  requirements.txt
docs/: DOCUMENTATION_INVENTORY.md  dev-setup.md  mcu-firmware-handoff.md  protocol-for-mcu.md  spec.md
docs/superpowers/plans/: 2026-07-09-dual-motor-pid.md  2026-07-09-pid-host-v1-implementation.md
docs/superpowers/specs/: 2026-07-09-auto-pid-tuning-design.md  2026-07-09-pid-host-design.md
src/pid_host/: config.py  data.py  main.py  protocol.py  serial_link.py  simulator.py
src/pid_host/ui/: main_window.py
tests/: test_config.py  test_data.py  test_launchers.py  test_protocol.py  test_runtime.py  test_simulator.py
